--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,3 +1,10 @@
 $primary: #783818;
 $secondary: #d5b890;
 $tertiary: #08cccc;
+$complementary-color1: black;
+$background-color1: #eee1d063;
+
+$font-1: 'Charm', cursive;
+$font-2: 'Yeseva One', cursive;
+$font-3:  'Playball', cursive;
+$font-4: 'Merienda One', cursive;
