--- a/sass/base/main.scss
+++ b/sass/base/main.scss
@@ -5,7 +5,7 @@
 }
 
 #introduction {
-  border: dotted 3px #08cccc;
+  border: dotte$tertiary;
   border-radius: 20px 0 20px 0;
   width: 70%;
   margin-left: 0;
@@ -13,29 +13,29 @@
   margin-bottom: 20px;
   padding: 15px;
 
-  @include mobile{
+  @include mobile {
     width: 95%;
-    border: dotted 2px #783818;
+    border: dotted 2px $primary;
   }
 
-  @include tablet{
-    border: dotted 2px #d5b890;
+  @include tablet {
+    border: dotted 2px $secondary;
   }
 }
 
 #introTitle {
   margin: 0;
-  font-family: Cookie;
+  font-family: $font-4;
   font-size: 30px;
 
-  @include mobile{
+  @include mobile {
     font-size: 35px;
   }
 }
 
 #talk {
   margin: 0;
-  font-family: cursive;
+  font-family: $font-4;
 }
 
 .mySkillsSection {
@@ -50,7 +50,7 @@
 }
 
 #hardSkills {
-  border: dotted 3px #783818;
+  border: dotted 3px $primary;
   border-radius: 20px 0 20px 0;
   width: 60%;
   padding: 10px;
@@ -58,13 +58,13 @@
   flex-direction: column;
 
   @include mobile {
-    border: dotted 2px #d5b890;
+    border: dotted 2px $secondary;
     margin-bottom: 20px;
     width: 95%;
   }
 
-  @include tablet{
-    border: dotted 2px #08cccc;
+  @include tablet {
+    border: dotted 2px $tertiary;
   }
 }
 
@@ -75,7 +75,7 @@
   justify-content: space-between;
   width: 100%;
 
-  @include mobile{
+  @include mobile {
     flex-direction: column;
   }
 }
@@ -85,25 +85,25 @@
   font-size: 30px;
   margin: 0;
   text-align: center;
-  font-family: Cookie;
-  @include mobile{
+  font-family: $font-4;
+  @include mobile {
     font-size: 35px;
   }
 }
 
 .titlesh4 {
-    margin-bottom: 9px;
-    font-family: Great Vibes;
-    font-size: 23px;
-    margin-top: 0px;
+  margin-bottom: 9px;
+  font-family: $font-1;
+  font-size: 23px;
+  margin-top: 0px;
 
-    @include mobile{
-      font-size: 35px;
-    }
+  @include mobile {
+    font-size: 35px;
+  }
 }
 
 #softSkills {
-  border: dotted 3px #d5b890;
+  border: dotted 3px $secondary;
   border-radius: 20px 0 20px 0;
   width: 25%;
   padding: 10px;
@@ -111,36 +111,38 @@
   flex-direction: column;
   align-items: center;
 
-  @include mobile{
-    border: dotted 2px #08cccc;
+  @include mobile {
+    border: dotted 2px $tertiary;
     width: 95%;
     padding: 5px;
     margin-bottom: 20px;
   }
 
-  @include tablet{
-    border: dotted 2px #783818;
+  @include tablet {
+    border: dotted 2px $primary;
   }
 }
 
 .listMyHardSkills {
-    font-size: 15px;
+  font-size: 15px;
   list-style: none;
   padding: 0;
   margin: 0;
-  font-family: cursive;
+  font-family: $font-4;
+  color: $complementary-color1;
 
-  @include mobile{
+  @include mobile {
     font-size: 20px;
   }
 }
 
-.listMySoftSkills{
-    font-size: 15px;
+.listMySoftSkills {
+  font-size: 15px;
   margin: 10px;
   list-style: none;
   padding: 0;
-  font-family: cursive;
+  font-family: $font-4;
+  color: $complementary-color1;
 
   @include mobile {
     margin: 5px;
@@ -148,44 +150,44 @@
   }
 }
 
-#myProjectsSection{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    width: 100%;
+#myProjectsSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  width: 100%;
 
-    @include mobile{
-      margin-top: 0;
-    }
+  @include mobile {
+    margin-top: 0;
+  }
 }
 
-#myProjects{
-    border: dotted 3px #d5b890;
-    border-radius: 20px 0 20px 0;
-    padding: 10px;
-    width: 95%;
+#myProjects {
+  border: dotted 3px $secondary;
+  border-radius: 20px 0 20px 0;
+  padding: 10px;
+  width: 95%;
 
-    @include mobile{
-      border: dotted 2px #783818;
-    }
+  @include mobile {
+    border: dotted 2px $primary;
+  }
 
-    @include tablet{
-      border: dotted 2px #08cccc;
-    }
+  @include tablet {
+    border: dotted 2px $tertiary;
+  }
 }
 
-#projectBigTitle, 
-#careerBigTitle, 
-#interestsBigTitle, 
-#languagesBigTitle{
-  font-family: Cookie;
+#projectBigTitle,
+#careerBigTitle,
+#interestsBigTitle,
+#languagesBigTitle {
+  font-family: $font-4;
   font-size: 30px;
   text-align: center;
   margin: 0;
   margin-bottom: 10px;
 
-  @include mobile{
+  @include mobile {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -193,20 +195,22 @@
   }
 }
 
-.explications{
-  font-family: cursive;
+.explications {
+  font-family: $font-4;
   margin: 0;
   font-size: 14px;
 
-  @include mobile{
+  @include mobile {
     font-size: 20px;
   }
 }
 
 //Projet 1
-.projectsCards1{
-  background-color: #eee1d063;
-  border: dotted 3px #783818;
+.projectsCards1,
+.projectsCards3,
+.projectsCards5 {
+  background-color: $background-color1;
+  border: dotted 3px $primary;
   border-radius: 20px 0 20px 0;
   padding: 10px;
   display: flex;
@@ -214,639 +218,305 @@
   margin-bottom: 20px;
   width: 100%;
 
-  @include mobile{
-    border: dotted 2px #08cccc;
+  @include mobile {
+    border: dotted 2px $tertiary;
     flex-direction: column;
   }
 
-  @include tablet{
-    border: dotted 2px #d5b890;
+  @include tablet {
+    border: dotted 2px $secondary;
   }
 }
 
-.infosProjectCard1{
+.projectsCards2,
+.projectsCards4,
+.projectsCards6 {
+  background-color: $background-color1;
+  border: dotted 3px $secondary;
+  border-radius: 20px 0 20px 0;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  width: 100%;
+  @include mobile {
+    border: dotted 2px $tertiary;
+    flex-direction: column;
+  }
+
+  @include tablet {
+    border: dotted 2px $primary;
+  }
+}
+
+
+.infosProjectCard1,
+.infosProjectCard2,
+.infosProjectCard3,
+.infosProjectCard4,
+.infosProjectCard5,
+.infosProjectCard6 {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.projectTitle1{
+.projectTitle1,
+.projectTitle2,
+.projectTitle3,
+.projectTitle4,
+.projectTitle5,
+.projectTitle6 {
   text-align: center;
   font-size: 25px;
   margin: 0;
-  font-family: Great Vibes;
+  font-family: $font-1;
 
-  @include mobile{
+  @include mobile {
     font-size: 35px;
   }
 }
 
-.projectInfos1{
-  font-family: cursive;
+.projectInfos1,
+.projectInfos2,
+.projectInfos3,
+.projectInfos4,
+.projectInfos5,
+.projectInfos6 {
+  font-family: $font-4;
   font-size: 14px;
-  @include mobile{
+  color: $complementary-color1;
+  @include mobile {
     font-size: 20px;
   }
 }
 
-.imgProjectCard1{
-  border: dotted 3px #08cccc;
+.imgProjectCard1,
+.imgProjectCard2,
+.imgProjectCard3,
+.imgProjectCard4,
+.imgProjectCard5,
+.imgProjectCard6 {
+  border: dotted 3px $tertiary;
   border-radius: 20px 0 20px 0;
   padding: 1px;
   width: 100%;
-  @include mobile{
-    border: dotted 2px #08cccc;
+  @include mobile {
+    border: dotted 2px $tertiary;
   }
 
-  @include tablet{
-    border: dotted 2px #08cccc;
+  @include tablet {
+    border: dotted 2px $tertiary;
   }
 }
 
-.imgProject1{
+.imgProject1,
+.imgProject2,
+.imgProject3,
+.imgProject4,
+.imgProject5,
+.imgProject6 {
   width: 100%;
   border-radius: 20px 0 20px 0;
 }
 
-.imgProject1:hover{
+.imgProject1:hover,
+.imgProject3:hover,
+.imgProject5:hover {
   transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
+  border: dotted 3px $secondary;
 
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
+  @include tablet {
+    transform: scale(1.5) translate(-34%, 7%);
+    border: dotted 2px $secondary;
+    width: 110%;
+  }
+  @include mobile {
+    transform: scale(1.1) translate(0%, 7%);
     border: dotted 2px #783818;
+    width: 100%;
+    height: 200px;
   }
 
-  @include tablet{
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #d5b890;
-    width: 110%;  }
 }
 
-.infosImg{
-  text-align: center;
-  font-family: cursive;
+.imgProject2:hover,
+.imgProject4:hover,
+.imgProject6:hover {
+  transform: scale(1.4) translate(-20%, 0%);
+  border: dotted 3px $primary;
+  
+  @include tablet {
+    transform: scale(1.5) translate(-34%, 7%);
+    border: dotted 2px $primary;
+    width: 110%;
+  }
+  @include mobile {
+    transform: scale(1.1) translate(0%, 7%);
+    border: dotted 2px #783818;
+    width: 100%;
+    height: 200px;
+  }
 
-  @include mobile{
+}
+
+.infosImg {
+  text-align: center;
+  font-family: $font-4;
+
+  @include mobile {
     font-size: 18px;
   }
 }
 
 // Projet 2
 
-.projectsCards2{
-  background-color: #eee1d063;
-  border: dotted 3px #d5b890;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-  width: 100%;
-  @include mobile{
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
 
-  @include tablet{
-    border: dotted 2px #783818;
-  }
-}
 
-.infosProjectCard2{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  width: 100%;
-}
 
-.projectTitle2{
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
 
-  @include mobile{
-    font-size: 35px;
-  }
-}
-
-.projectInfos2{
-  font-family: cursive;
-  font-size: 14px;
-
-  @include mobile{
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard2{
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-
-  @include mobile{
-    border: dotted 2px #08cccc;
-  }
-
-  @include tablet{
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject2{
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject2:hover{
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #783818;
-
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-
-  @include tablet{
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #783818;
-    width: 110%;  }
-}
 
 //Projet 3
 
-.projectsCards3{
-  background-color: #eee1d063;
-  border: dotted 3px #783818;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-      width: 100%;
 
-  @include mobile{
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard3{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle3{
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-
-  @include mobile{
-    font-size: 35px;
-  }
-}
-
-.projectInfos3 {
-  font-family: cursive;
+#laChouetteAgenceBefore {
+  color: $primary;
+  font-family: $font-4;
   font-size: 14px;
 
-  @include mobile{
-    font-size: 20px;
-  }
-}
-
-#laChouetteAgenceBefore{
-  color: #783818;
-  font-family: cursive;
-  font-size: 14px;
-
-  @include mobile{
+  @include mobile {
     font-size: 19px;
     margin-bottom: 10px;
   }
 }
 
-.imgProjectCard3{
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-
-  @include mobile{
-    border: dotted 2px #08cccc;
-  }
-
-  @include tablet{
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject3{
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject3:hover{
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
-
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #783818;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-    transform: scale(1.5) translate(-34%, 7%);
-    width: 110%;
-  }
-}
-
-
-//Projet 4
-
-.projectsCards4{
-  background-color: #eee1d063;
-  border: dotted 3px #d5b890;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-      width: 100%;
-  @include mobile{
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard4{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle4{
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-
-  @include mobile{
-    font-size: 35px;
-  }
-}
-
-.projectInfos4{
-  font-family: cursive;
-  font-size: 14px;
-
-  @include mobile{
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard4{
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-
-  @include mobile{
-    border: dotted 2px #08cccc;
-  }
-
-  @include tablet{
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject4{
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject4:hover{
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #783818;
-
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-
-  @include tablet{
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #783818;
-    width: 110%;  }
-}
-
-//Projet 5
-
-.projectsCards5{
-  background-color: #eee1d063;
-  border: dotted 3px #783818;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-      width: 100%;
-  @include mobile{
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard5{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle5{
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-
-  @include mobile{
-    font-size: 35px;
-  }
-}
-
-.projectInfos5{
-  font-family: cursive;
-  font-size: 14px;
-
-  @include mobile{
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard5{
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-
-  @include mobile{
-    border: dotted 2px #08cccc;
-  }
-
-  @include tablet{
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject5{
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject5:hover{
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
-
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #783818;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-    transform: scale(1.5) translate(-34%, 7%);
-    width: 110%;
-  }
-}
-
-
-//Projet 6
-
-.projectsCards6{
-  background-color: #eee1d063;
-  border: dotted 3px #d5b890;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-      width: 100%;
-  @include mobile{
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-
-  @include tablet{
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard6{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle6{
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-
-  @include mobile{
-    font-size: 35px;
-  }
-}
-
-.projectInfos6{
-  font-family: cursive;
-  font-size: 14px;
-
-  @include mobile{
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard6{
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-
-  @include mobile{
-    border: dotted 2px #08cccc;
-  }
-
-  @include tablet{
-    border: dotted 2px #08cccc;
-    width: 100%;
-  }
-}
-
-.imgProject6{
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject6:hover{
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #783818;
-
-  @include mobile{
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-
-  @include tablet{
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #783818;
-    width: 110%;
-  }
-}
 
 // Mon parcours
-.bigSection{
+.bigSection {
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-evenly;
 
-  @include mobile{
+  @include mobile {
     flex-direction: column;
     align-items: center;
   }
 }
 
-.smallSection{
+.smallSection {
   display: flex;
   flex-direction: column;
 
-  @include mobile{
+  @include mobile {
     align-items: center;
   }
 }
 
-#myCareerSection{
+#myCareerSection {
   margin-top: 20px;
   // margin-left: 30px;
-  border: dotted 3px #08cccc ;
-    border-radius: 20px 0 20px 0;
-    padding: 10px;
-    width: 50%;
+  border: dotted 3px $tertiary;
+  border-radius: 20px 0 20px 0;
+  padding: 10px;
+  width: 50%;
 
-    @include mobile{
-      width: 95%;
-      border: dotted 2px #d5b890;
-    }
+  @include mobile {
+    width: 95%;
+    border: dotted 2px $secondary;
+  }
 
-    @include tablet{
-      border: dotted 2px #783818;
-    }
+  @include tablet {
+    border: dotted 2px $primary;
+  }
 }
 
-#myCareer{
+#myCareer {
   display: flex;
   flex-direction: column;
 }
 
-.careerSmallTitle{
+.careerSmallTitle {
   margin: 0;
-  font-family: Great Vibes;
+  font-family: $font-1;
   font-size: 25px;
-  color: #783818;
-  border: dotted 3px #d5b890;
+  color: $primary;
+  border: dotted 3px $secondary;
   border-radius: 20px 0 20px 0;
   padding: 3px;
 
-  @include mobile{
-    border: dotted 2px #08cccc;
+  @include mobile {
+    border: dotted 2px $tertiary;
   }
 
-  @include tablet{
-    border: dotted 2px #08cccc;
+  @include tablet {
+    border: dotted 2px $tertiary;
   }
 }
 
-.careerInfos{
-  font-family: cursive;
+.careerInfos {
+  font-family: $font-4;
   font-size: 15px;
 
-  @include mobile{
+  @include mobile {
     font-size: 20px;
   }
 }
 
 // Mes centres d'intérêt
 
-#myInterestsSection{
+#myInterestsSection {
   margin-top: 20px;
-  border: dotted 3px #783818;
+  border: dotted 3px $primary;
   border-radius: 20px 0 20px 0;
   width: 100%;
   padding: 10px;
 
-  @include mobile{
+  @include mobile {
     width: 95%;
-    border: dotted 2px #d5b890;
+    border: dotted 2px $secondary;
   }
 
-  @include tablet{
-    border: dotted 2px #08cccc;
+  @include tablet {
+    border: dotted 2px $tertiary;
   }
 }
 
-.interests{
+.interests {
   margin: 0;
-  font-family: cursive;
-  @include mobile{
+  font-family: $font-4;
+  @include mobile {
     font-size: 20px;
   }
 }
 
-ol{
+ol {
   padding: 0;
 }
 
-#languagesSection{
+#languagesSection {
   margin-top: 20px;
-  border: dotted 3px #d5b890;
+  border: dotted 3px $secondary;
   border-radius: 20px 0 20px 0;
   width: 100%;
   padding: 10px;
 
-  @include mobile{
+  @include mobile {
     width: 95%;
-    border: dotted 2px #783818;
+    border: dotted 2px $primary;
   }
 
-  @include tablet{
-    border: dotted 2px #783818;
+  @include tablet {
+    border: dotted 2px $primary;
   }
 }
 
-.languages{
+.languages {
   padding: 0;
-    text-align: center;
-    margin: 0;
-    font-family: cursive;
+  text-align: center;
+  margin: 0;
+  font-family: $font-4;
 
-    @include mobile{
-      font-size: 20px;
-    }
+  @include mobile {
+    font-size: 20px;
+  }
 }
