--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Parisienne&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -58,7 +55,7 @@ a {
 }
 
 #h1Header {
-  font-family: Great Vibes;
+  font-family: "Charm", cursive;
   color: #08cccc;
   font-size: 45px;
   margin: 15px;
@@ -77,7 +74,7 @@ a {
 }
 
 #h2Header {
-  font-family: Cookie;
+  font-family: "Yeseva One", cursive;
   color: #08cccc;
   font-size: 30px;
   margin-bottom: 10px;
@@ -114,7 +111,7 @@ a {
 }
 
 .footerTitle {
-  font-family: Great Vibes;
+  font-family: "Charm", cursive;
   color: #08cccc;
   font-size: 30px;
   margin: 15px;
@@ -249,8 +246,8 @@ a {
 .menuDetails {
   text-align: center;
   margin: 0;
-  font-family: cursive;
-  color: #783818;
+  font-family: "Merienda One", cursive;
+  color: black;
 }
 
 .menuParts {
@@ -274,7 +271,7 @@ a {
 }
 
 #introduction {
-  border: dotted 3px #08cccc;
+  border: dotte #08cccc;
   border-radius: 20px 0 20px 0;
   width: 70%;
   margin-left: 0;
@@ -296,7 +293,7 @@ a {
 
 #introTitle {
   margin: 0;
-  font-family: Cookie;
+  font-family: "Merienda One", cursive;
   font-size: 30px;
 }
 @media (max-width: 600px) {
@@ -307,7 +304,7 @@ a {
 
 #talk {
   margin: 0;
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
 }
 
 .mySkillsSection {
@@ -361,7 +358,7 @@ a {
   font-size: 30px;
   margin: 0;
   text-align: center;
-  font-family: Cookie;
+  font-family: "Merienda One", cursive;
 }
 @media (max-width: 600px) {
   #hardSkillsTitle,
@@ -372,7 +369,7 @@ a {
 
 .titlesh4 {
   margin-bottom: 9px;
-  font-family: Great Vibes;
+  font-family: "Charm", cursive;
   font-size: 23px;
   margin-top: 0px;
 }
@@ -410,7 +407,8 @@ a {
   list-style: none;
   padding: 0;
   margin: 0;
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
+  color: black;
 }
 @media (max-width: 600px) {
   .listMyHardSkills {
@@ -423,7 +421,8 @@ a {
   margin: 10px;
   list-style: none;
   padding: 0;
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
+  color: black;
 }
 @media (max-width: 600px) {
   .listMySoftSkills {
@@ -466,7 +465,7 @@ a {
 #careerBigTitle,
 #interestsBigTitle,
 #languagesBigTitle {
-  font-family: Cookie;
+  font-family: "Merienda One", cursive;
   font-size: 30px;
   text-align: center;
   margin: 0;
@@ -485,7 +484,7 @@ a {
 }
 
 .explications {
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
   margin: 0;
   font-size: 14px;
 }
@@ -495,391 +494,10 @@ a {
   }
 }
 
-.projectsCards1 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
-  border: dotted 3px #783818;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .projectsCards1 {
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-}
-@media (max-width: 1200px) {
-  .projectsCards1 {
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard1 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle1 {
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-}
-@media (max-width: 600px) {
-  .projectTitle1 {
-    font-size: 35px;
-  }
-}
-
-.projectInfos1 {
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  .projectInfos1 {
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard1 {
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .imgProjectCard1 {
-    border: dotted 2px #08cccc;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProjectCard1 {
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject1 {
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject1:hover {
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
-}
-@media (max-width: 600px) {
-  .imgProject1:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #783818;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProject1:hover {
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #d5b890;
-    width: 110%;
-  }
-}
-
-.infosImg {
-  text-align: center;
-  font-family: cursive;
-}
-@media (max-width: 600px) {
-  .infosImg {
-    font-size: 18px;
-  }
-}
-
-.projectsCards2 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
-  border: dotted 3px #d5b890;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .projectsCards2 {
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-}
-@media (max-width: 1200px) {
-  .projectsCards2 {
-    border: dotted 2px #783818;
-  }
-}
-
-.infosProjectCard2 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  width: 100%;
-}
-
-.projectTitle2 {
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-}
-@media (max-width: 600px) {
-  .projectTitle2 {
-    font-size: 35px;
-  }
-}
-
-.projectInfos2 {
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  .projectInfos2 {
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard2 {
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .imgProjectCard2 {
-    border: dotted 2px #08cccc;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProjectCard2 {
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject2 {
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject2:hover {
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #783818;
-}
-@media (max-width: 600px) {
-  .imgProject2:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProject2:hover {
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #783818;
-    width: 110%;
-  }
-}
-
-.projectsCards3 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
-  border: dotted 3px #783818;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .projectsCards3 {
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-}
-@media (max-width: 1200px) {
-  .projectsCards3 {
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard3 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle3 {
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-}
-@media (max-width: 600px) {
-  .projectTitle3 {
-    font-size: 35px;
-  }
-}
-
-.projectInfos3 {
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  .projectInfos3 {
-    font-size: 20px;
-  }
-}
-
-#laChouetteAgenceBefore {
-  color: #783818;
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  #laChouetteAgenceBefore {
-    font-size: 19px;
-    margin-bottom: 10px;
-  }
-}
-
-.imgProjectCard3 {
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .imgProjectCard3 {
-    border: dotted 2px #08cccc;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProjectCard3 {
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject3 {
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject3:hover {
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
-}
-@media (max-width: 600px) {
-  .imgProject3:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #783818;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProject3:hover {
-    border: dotted 2px #d5b890;
-    transform: scale(1.5) translate(-34%, 7%);
-    width: 110%;
-  }
-}
-
-.projectsCards4 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
-  border: dotted 3px #d5b890;
-  border-radius: 20px 0 20px 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .projectsCards4 {
-    border: dotted 2px #08cccc;
-    flex-direction: column;
-  }
-}
-@media (max-width: 1200px) {
-  .projectsCards4 {
-    border: dotted 2px #d5b890;
-  }
-}
-
-.infosProjectCard4 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle4 {
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-}
-@media (max-width: 600px) {
-  .projectTitle4 {
-    font-size: 35px;
-  }
-}
-
-.projectInfos4 {
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  .projectInfos4 {
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard4 {
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .imgProjectCard4 {
-    border: dotted 2px #08cccc;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProjectCard4 {
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject4 {
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject4:hover {
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #783818;
-}
-@media (max-width: 600px) {
-  .imgProject4:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProject4:hover {
-    transform: scale(1.5) translate(-34%, 7%);
-    border: dotted 2px #783818;
-    width: 110%;
-  }
-}
-
+.projectsCards1,
+.projectsCards3,
 .projectsCards5 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
+  background-color: #eee1d063;
   border: dotted 3px #783818;
   border-radius: 20px 0 20px 0;
   padding: 10px;
@@ -889,87 +507,25 @@ a {
   width: 100%;
 }
 @media (max-width: 600px) {
-  .projectsCards5 {
+  .projectsCards1,
+.projectsCards3,
+.projectsCards5 {
     border: dotted 2px #08cccc;
     flex-direction: column;
   }
 }
 @media (max-width: 1200px) {
-  .projectsCards5 {
+  .projectsCards1,
+.projectsCards3,
+.projectsCards5 {
     border: dotted 2px #d5b890;
   }
 }
 
-.infosProjectCard5 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.projectTitle5 {
-  text-align: center;
-  font-size: 25px;
-  margin: 0;
-  font-family: Great Vibes;
-}
-@media (max-width: 600px) {
-  .projectTitle5 {
-    font-size: 35px;
-  }
-}
-
-.projectInfos5 {
-  font-family: cursive;
-  font-size: 14px;
-}
-@media (max-width: 600px) {
-  .projectInfos5 {
-    font-size: 20px;
-  }
-}
-
-.imgProjectCard5 {
-  border: dotted 3px #08cccc;
-  border-radius: 20px 0 20px 0;
-  padding: 1px;
-  width: 100%;
-}
-@media (max-width: 600px) {
-  .imgProjectCard5 {
-    border: dotted 2px #08cccc;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProjectCard5 {
-    border: dotted 2px #08cccc;
-  }
-}
-
-.imgProject5 {
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.imgProject5:hover {
-  transform: scale(1.4) translate(-20%, 0%);
-  border: dotted 3px #d5b890;
-}
-@media (max-width: 600px) {
-  .imgProject5:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #783818;
-  }
-}
-@media (max-width: 1200px) {
-  .imgProject5:hover {
-    border: dotted 2px #d5b890;
-    transform: scale(1.5) translate(-34%, 7%);
-    width: 110%;
-  }
-}
-
+.projectsCards2,
+.projectsCards4,
 .projectsCards6 {
-  background-color: rgba(238, 225, 208, 0.3882352941);
+  background-color: #eee1d063;
   border: dotted 3px #d5b890;
   border-radius: 20px 0 20px 0;
   padding: 10px;
@@ -979,45 +535,80 @@ a {
   width: 100%;
 }
 @media (max-width: 600px) {
-  .projectsCards6 {
+  .projectsCards2,
+.projectsCards4,
+.projectsCards6 {
     border: dotted 2px #08cccc;
     flex-direction: column;
   }
 }
 @media (max-width: 1200px) {
-  .projectsCards6 {
-    border: dotted 2px #d5b890;
+  .projectsCards2,
+.projectsCards4,
+.projectsCards6 {
+    border: dotted 2px #783818;
   }
 }
 
+.infosProjectCard1,
+.infosProjectCard2,
+.infosProjectCard3,
+.infosProjectCard4,
+.infosProjectCard5,
 .infosProjectCard6 {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
+.projectTitle1,
+.projectTitle2,
+.projectTitle3,
+.projectTitle4,
+.projectTitle5,
 .projectTitle6 {
   text-align: center;
   font-size: 25px;
   margin: 0;
-  font-family: Great Vibes;
+  font-family: "Charm", cursive;
 }
 @media (max-width: 600px) {
-  .projectTitle6 {
+  .projectTitle1,
+.projectTitle2,
+.projectTitle3,
+.projectTitle4,
+.projectTitle5,
+.projectTitle6 {
     font-size: 35px;
   }
 }
 
+.projectInfos1,
+.projectInfos2,
+.projectInfos3,
+.projectInfos4,
+.projectInfos5,
 .projectInfos6 {
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
   font-size: 14px;
+  color: black;
 }
 @media (max-width: 600px) {
-  .projectInfos6 {
+  .projectInfos1,
+.projectInfos2,
+.projectInfos3,
+.projectInfos4,
+.projectInfos5,
+.projectInfos6 {
     font-size: 20px;
   }
 }
 
+.imgProjectCard1,
+.imgProjectCard2,
+.imgProjectCard3,
+.imgProjectCard4,
+.imgProjectCard5,
 .imgProjectCard6 {
   border: dotted 3px #08cccc;
   border-radius: 20px 0 20px 0;
@@ -1025,37 +616,107 @@ a {
   width: 100%;
 }
 @media (max-width: 600px) {
-  .imgProjectCard6 {
+  .imgProjectCard1,
+.imgProjectCard2,
+.imgProjectCard3,
+.imgProjectCard4,
+.imgProjectCard5,
+.imgProjectCard6 {
     border: dotted 2px #08cccc;
   }
 }
 @media (max-width: 1200px) {
-  .imgProjectCard6 {
+  .imgProjectCard1,
+.imgProjectCard2,
+.imgProjectCard3,
+.imgProjectCard4,
+.imgProjectCard5,
+.imgProjectCard6 {
     border: dotted 2px #08cccc;
-    width: 100%;
   }
 }
 
+.imgProject1,
+.imgProject2,
+.imgProject3,
+.imgProject4,
+.imgProject5,
 .imgProject6 {
   width: 100%;
   border-radius: 20px 0 20px 0;
 }
 
+.imgProject1:hover,
+.imgProject3:hover,
+.imgProject5:hover {
+  transform: scale(1.4) translate(-20%, 0%);
+  border: dotted 3px #d5b890;
+}
+@media (max-width: 1200px) {
+  .imgProject1:hover,
+.imgProject3:hover,
+.imgProject5:hover {
+    transform: scale(1.5) translate(-34%, 7%);
+    border: dotted 2px #d5b890;
+    width: 110%;
+  }
+}
+@media (max-width: 600px) {
+  .imgProject1:hover,
+.imgProject3:hover,
+.imgProject5:hover {
+    transform: scale(1.1) translate(0%, 7%);
+    border: dotted 2px #783818;
+    width: 100%;
+    height: 200px;
+  }
+}
+
+.imgProject2:hover,
+.imgProject4:hover,
 .imgProject6:hover {
   transform: scale(1.4) translate(-20%, 0%);
   border: dotted 3px #783818;
 }
-@media (max-width: 600px) {
-  .imgProject6:hover {
-    transform: scale(1.2) translate(0%, 0%);
-    border: dotted 2px #d5b890;
-  }
-}
 @media (max-width: 1200px) {
-  .imgProject6:hover {
+  .imgProject2:hover,
+.imgProject4:hover,
+.imgProject6:hover {
     transform: scale(1.5) translate(-34%, 7%);
     border: dotted 2px #783818;
     width: 110%;
+  }
+}
+@media (max-width: 600px) {
+  .imgProject2:hover,
+.imgProject4:hover,
+.imgProject6:hover {
+    transform: scale(1.1) translate(0%, 7%);
+    border: dotted 2px #783818;
+    width: 100%;
+    height: 200px;
+  }
+}
+
+.infosImg {
+  text-align: center;
+  font-family: "Merienda One", cursive;
+}
+@media (max-width: 600px) {
+  .infosImg {
+    font-size: 18px;
+  }
+}
+
+#laChouetteAgenceBefore {
+  color: #783818;
+  font-family: "Merienda One", cursive;
+  font-size: 14px;
+}
+@media (max-width: 600px) {
+  #laChouetteAgenceBefore {
+    font-size: 19px;
+    margin-bottom: 10px;
   }
 }
 
@@ -1107,7 +768,7 @@ a {
 
 .careerSmallTitle {
   margin: 0;
-  font-family: Great Vibes;
+  font-family: "Charm", cursive;
   font-size: 25px;
   color: #783818;
   border: dotted 3px #d5b890;
@@ -1126,7 +787,7 @@ a {
 }
 
 .careerInfos {
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
   font-size: 15px;
 }
 @media (max-width: 600px) {
@@ -1156,7 +817,7 @@ a {
 
 .interests {
   margin: 0;
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
 }
 @media (max-width: 600px) {
   .interests {
@@ -1191,7 +852,7 @@ ol {
   padding: 0;
   text-align: center;
   margin: 0;
-  font-family: cursive;
+  font-family: "Merienda One", cursive;
 }
 @media (max-width: 600px) {
   .languages {
