--- a/sass/base/header_footer.scss
+++ b/sass/base/header_footer.scss
@@ -35,15 +35,19 @@
     font-size: 30px;
     margin-bottom: 10px;
     margin-top: 0;
-    @include mobile {
-     margin: 0;
-     margin-bottom: 10px;
-     color: $secondary;
-    }
 
     @include tablet{
         color: $primary;
     }
+
+    @include mobile {
+     margin: 0;
+     margin-top: 10px;
+     margin-bottom: 10px;
+     color: $secondary;
+     font-size: 23px;
+    }
+
 }
 
 //Footer 
