--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -10,4 +10,35 @@
   }
 }
 
+@mixin border-dotted-primary{
+  border: dotted 3px $primary;
+  border-radius: 20px 0 20px 0;
+}
 
+@mixin border-dotted-secondary{
+  border: dotted 3px $secondary;
+  border-radius: 20px 0 20px 0;
+}
+
+@mixin border-dotted-tertiary{
+  border: dotted 3px $tertiary;
+  border-radius: 20px 0 20px 0;
+}
+
+@mixin lists-hard-soft-skills{
+  font-family: $font-4;
+  color: $complementary-color1;
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+}
+
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+@mixin flex-column{
+  display: flex;
+  flex-direction: column;
+}
