--- a/sass/base/navBar.scss
+++ b/sass/base/navBar.scss
@@ -1,5 +1,7 @@
 .menuNavBar {
   height: 10rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
   @include flex-row;
   align-items: center;
   justify-content: space-evenly;
@@ -94,6 +96,8 @@
 
 .menuParts {
   margin-right: 15px;
+  list-style: none;
+  padding-left: 0;
   @include flex-column;
 
   @include mobile {
