--- a/style.css
+++ b/style.css
@@ -714,6 +714,7 @@ a {
 }
 
 #laChouetteAgenceBefore {
+  margin-top: 10px;
   color: #783818;
   font-family: "Merienda One", cursive;
   font-size: 14px;
