--- a/sass/base/header_footer.scss
+++ b/sass/base/header_footer.scss
@@ -44,7 +44,7 @@
      margin: 0;
      margin-top: 10px;
      margin-bottom: 10px;
-     color: $secondary;
+    //  color: $secondary;
      font-size: 23px;
     }
 
